@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

class Movie{
-int id
-String title
-String overview
-LocalDate releaseDate
-double rating
-double popularity
-Set<Actor> actors
-Director director
-Set<Genre> genres
}

class Actor{
-int id
-String name
-LocalDate birthDate
-Set<Movie> movies
}

class Director{
-int id
-String name
-LocalDate birthDate
-Set<Movie> movies
}

class Genre{
-int id
-String name
-Set<Movie> movies
}

Movie "*" <-----> "*" Actor
Movie "*" ------> "1" Director
Movie "*" <-----> "*" Genre
@enduml